# FileExplorer

./: .gitignore  CMakeLists.txt  README.md
QTLab3/: CMakeLists.txt  FilePercentageStrategy.cpp  FilePercentageStrategy.h  FolderPercentageStrategy.cpp  FolderPercentageStrategy.h  StrategyContext.cpp  StrategyContext.h  TypePercentageStrategy.cpp  TypePercentageStrategy.h  main.cpp
QTLab3/include/: FileExplorer.h  FileExplorerTableModel.h  FilePercentageStrategy.h  FolderPercentageStrategy.h  QChartWidget.h  StrategyContext.h  TypePercentageStrategy.h
QTLab3/src/: FileExplorer.cpp  FileExplorerTableModel.cpp  FolderPercentageStrategy.cpp  QChartWidget.cpp  StrategyContext.cpp  TypePercentageStrategy.cpp  main.cpp
QTLab3/ui/: FileExplorer.ui
include/: FileExplorer.h  FileExplorerTableModel.h  FilePercentageStrategy.h  FolderPercentageStrategy.h  TypePercentageStrategy.h
src/: FileExplorer.cpp  FilePercentageStrategy.cpp  FolderPercentageStrategy.cpp
